# halo2-regex

./: .gitignore  Cargo.toml  README.md  halo2_regex_lookup.txt
.cargo/: config
benches/: regex_evm.rs
examples/: ex_allstr.txt  ex_substr_id1.txt  regex.rs
src/: defs.rs  halo2_regex_lookup_body.txt  lib.rs  main.rs  regex.rs  substr.rs  table.rs
src/table/: mod.rs
src/vrm/: circom.js  circom.rs  js_caller.rs  mod.rs  regex.js
test_regexes/: regex1_test.json  regex1_test_lookup.txt  regex2_test.json  regex2_test_lookup.txt  regex3_test.json  regex3_test_lookup.txt  regex_test_lookup.txt  substr1_test_lookup.txt  substr2_test_lookup.txt  substr3_test_lookup.txt
