[package]
name = "halo2-regex"
version = "0.1.0"
edition = "2021"

[features]
default = ["vrm"]
dev-graph = ["halo2-base/dev-graph", "plotters"]
vrm = ["js-sandbox", "graph-cycles", "petgraph"]

[dependencies]
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
fancy-regex = "0.11.0"
petgraph = { version = "0.6.3", optional = true }
graph-cycles = { version = "0.1.0", optional = true }
thiserror = "1.0.40"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
js-sandbox = { version = "0.2.0-rc.1", git = "https://github.com/Bromeon/js-sandbox.git", rev = "cd256ef", optional = true }
itertools = "0.10.3"
clap = { version = "=4.2.1", features = ["derive"] }
log = "0.4.17"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"


[dev-dependencies]
rand = "0.8.5"
itertools = "0.10.3"
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
criterion = { version = "0.3" }


[[bench]]
name = "regex_evm"
harness = false

[[bin]]
name = "vrm"
test = false
bench = false

[lib]
name = "halo2_regex"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
